fix - overflow

--- a/capstone/static/css/scss/base.scss
+++ b/capstone/static/css/scss/base.scss
@@ -84,6 +84,7 @@ code {
   padding-left: 0;
   padding-right: 0;
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 .blue-button {
